# blab-chatbot-deepage

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  settings_deepage_TEMPLATE.py  settings_deepage_template.py
.github/workflows/: check.yaml  publish-doc.yaml
docs/: conf.py  title.rst
src/: demo.py  main.py
src/blab_chatbot_deepage/: __init__.py  __main__.py  controller_interface.py  conversation_deepage.py  deepage_bot.py  deepage_settings_format.py  server.py
