[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "blab-chatbot-deepage"
version = "0.0.1dev"
description = ""
authors = ["C4AI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,>=3.8.1,<3.9"
datasets = "^2.2.2"
transformers = { extras = ["torch"], version = "^4.25.1" }
fsspec = "^2022.5.0"
sentencepiece = "^0.1.96"
farm-haystack = "^1.14.0"
numpy = "<1.24"
python-magic = "^0.4.27"
blab-chatbot-bot-client = { extras = ["ws"], git = "https://github.com/C4AI/blab-chatbot-bot-client.git", branch = "main" }


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
darglint = "*"
flake8 = "*"
flake8-annotations = "*"
flake8-docstrings = "*"
flake8-bugbear = "*"
python-lsp-server = { extras = ["all"], version = "*" }
pyupgrade = "*"
mypy = "^1.2.0"
pre-commit = "^2.18.1"
ruff = "^0.0.261"


[tool.ruff]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "C4", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "ISC002", "ISC003", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN002", "ANN003", "ANN1", "ANN204", "ANN401", "ARG002", "A003", "D105", "D106", "D203", "D213", "D417", "DTZ", "I001", "TRY00", "UP035"]  # UP035 must be ignored for Python 3.8

[tool.ruff.pydocstyle]
ignore-decorators = ["overrides.overrides"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true
